fixed the white space in phone view edited the hero button size

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,18 +79,18 @@ body {
     color: white;
     text-shadow: 1px 1px 1px black;
     width: 80vw;
-    bottom: 10vh;
+    bottom: 15vh;
     left: 10vw;
     position: absolute;
   }
 
   #hero-button {
-    font-size: 3vw;
+    font-size: 4vw;
     z-index: 1;
     position: absolute;
-    bottom: 5vh;
-    width: 20vw;
-    left: 40vw;
+    bottom: 10vh;
+    width: 25vw;
+    left: 37.5vw;
 
   }
 }
